# celestia-recursive-sync

./: Cargo.toml  README.md
elf/: riscv32im-succinct-zkvm-elf
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: buffer.rs  main.rs
script/: Cargo.toml  vk.json  vk2.json
script/data/: nethead2.json  skipheader.json  zkgenesis.json
script/needed_headers/: 1015226.json  1103462.json  1186183.json  1263734.json  1336438.json  1404598.json  1468498.json  149318.json  1528405.json  1584567.json  1637219.json  1735942.json  1822325.json  1897910.json  1964047.json  2021917.json  2123190.json  2199145.json  220495.json  2256111.json  2341560.json  289448.json  356246.json  420957.json  483646.json  544376.json  603208.json  660201.json  715413.json  75845.json  768900.json  820715.json  921108.json
script/src/: compute_first_part.rs  create_proof0.rs  create_proof1.rs  main.rs  old_main.rs  tm_rpc_utils.rs
tests/: Cargo.toml
tests/src/: main.rs
