[package]
version = "0.1.0"
name = "cryptographic_sync-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = { path = "../../sp1/crates/zkvm/entrypoint", features = ["verify"] }
sha2 = "0.10.8"
bincode = "1.3.3"
serde_cbor = "0.11.2"
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
celestia-types = {path = "../../upstream-lumina/types"}

[patch.crates-io]
sha2-v0-9-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.9.8" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
ed25519-consensus = { git = "https://github.com/sp1-patches/ed25519-consensus", branch = "patch-v2.1.0" }

[profile.release]
debug = true