[workspace]
[package]
version = "0.1.0"
name = "cryptographic_sync-script"
edition = "2021"

[dependencies]
sp1-sdk = {version="=3.0.0-rc1"}
serde_json = { version = "1.0", default-features = false, features = ["alloc", "std"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_cbor = "0.11.2"
celestia-types = {path = "../../upstream-lumina/types"}
reqwest = { version = "0.11", features = ["json"] }
tendermint = { version = "0.35.0", default-features = false }
subtle-encoding = "0.5.1"
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
    "rust-crypto",
] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.82"

[build-dependencies]
sp1-helper = "=3.0.0-rc1"